v0.19.0/_sources/projections/misc/misc_eckertIV.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/misc/misc_eckertIV.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_misc_misc_eckertIV.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_misc_misc_eckertIV.py:


Eckert IV equal-area projection
===============================

The Eckert IV projection, presented by the German cartographer Max
Eckert-Greiffendorff in 1906, is a pseudo-cylindrical equal-area projection.
Central meridian and all parallels are straight lines; other meridians are
equally spaced elliptical arcs. The scale is true along latitude 40°30'.

**kf**\ [*lon0/*]\ *scale* or **Kf**\ [*lon0/*]\ *width*

The projection is set with **kf** or **Kf**. The central meridian is set with
the optional *lon0*, and the figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 17-31



.. image-sg:: /projections/misc/images/sphx_glr_misc_eckertIV_001.png
   :alt: misc eckertIV
   :srcset: /projections/misc/images/sphx_glr_misc_eckertIV_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt
    from pygmt.params import Axis

    fig = pygmt.Figure()
    # Use region "d" to specify global region (-180/180/-90/90)
    fig.coast(
        region="d",
        projection="Kf12c",
        frame=Axis(annot=True, tick=True, grid=True),
        land="ivory",
        water="bisque4",
    )
    fig.show()



.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.208 seconds)


.. rst-class:: sphx-glr-example-tags

   🏷 Tags: equal-area


.. _sphx_glr_download_projections_misc_misc_eckertIV.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: misc_eckertIV.ipynb <misc_eckertIV.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: misc_eckertIV.py <misc_eckertIV.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: misc_eckertIV.zip <misc_eckertIV.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
